--- a/index.html
+++ b/index.html
@@ -11,42 +11,33 @@
 </head>
 
 <body>
-    <h1>Punto 1</h1>
-    <h3>1.El programa muestra primero una tabla de notas con sus equivalentes en el Standard Grading System o el sistema
-        utilizado en los Estados Unidos que va desde la A hasta la F. El programa preguntará al usuario su nota y
-        transformará ese resultado al equivalente en el Standard Grading System. También el programa dará una pequeña
-        pero valiosa recomendación al usuario respecto a su nivel de estudio y calidad como estudiante.</h3>
-    <img class="img" src="Tabla.jpg">
+    <h1>Punto 2</h1>
+    <h3>Desarrolle un algoritmo para la empresa Constructora Tecnovivir Casas C.A., que le permita calcular e" imprimir
+        la nómina para su cancelación a un total de 50 obreros calificados a quienes debe cancelar por horas trabajadas.
+        La hora trabajada se pautó en 5,208.33 Pesos.</h3>
 
+<form id="horas" method="get">
+    <div>
+        <label>Nombre obrero</label>
+            <input type="text" name="nombre" id="name">
+        <label>Hora</label>
+            <input type="number" name="hora" id="hora">
+        <input type="submit" name="Enviar">
+    </div>
+</form>
+<dialog> 
+    <button id="cerrar">X</button>
+</dialog>
+<table>
+    <thead>
+        <th>Nombre</th>  
+        <th>Horas</th>
+        <th>Sueldo diario</th>>
+    </thead>
+    <tbody id="cuerpo">
 
-    <form id="myForm" method="get">
-        <div id="selecion">
-            <label>Traditional</label>
-            <input type="radio" name="scale" value="Traditional">
-            <label>Point Range</label>
-            <input type="radio" name="scale" value="Point_Range">
-        </div>
-        <input type="text" name="nota" placeholder="" required>
-        <input type="submit" value="Enviar">
-    </form>
-
-    <dialog>
-        <button id="close">X</button>
-        <table>
-            <thead>
-                <tr>
-                    <th>Traditional (%)</th>
-                    <th>14-Point Range</th>
-                    <th>Letter</th>
-                    <th>SBG Rating</th>
-                    <th>Proficiency Level Witch Standard</th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
-
-    </dialog>
-
+    </tbody>
+</table>
 </body>
 
 </html>
