--- a/index.html
+++ b/index.html
@@ -1,43 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sp">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad de Repaso - Primer Punto</title>
+    <title>Actividad de Repaso - Tercer Punto</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 
 <body>
-    <h1>Punto 2</h1>
-    <h3>Desarrolle un algoritmo para la empresa Constructora Tecnovivir Casas C.A., que le permita calcular e" imprimir
-        la nómina para su cancelación a un total de 50 obreros calificados a quienes debe cancelar por horas trabajadas.
-        La hora trabajada se pautó en 5,208.33 Pesos.</h3>
+    <h1>Punto 3</h1>
+    <h3>3. Dados dos números enteros positivos N y D, se dice que D es un divisor de N si el resto de dividir N entre D
+        es 0. Se dice que un número N es perfecto si la suma de sus divisores (excluido el propio N) es N. Por ejemplo
+        28 es perfecto, pues sus divisores (excluido elv28) son: 1, 2, 4, 7 y 14 y su suma es 1+2+4+7+14=28. Hacer un
+        organigrama que dado un número N nos diga si es o no perfecto.</h3>
 
-<form id="horas" method="get">
-    <div>
-        <label>Nombre obrero</label>
-            <input type="text" name="nombre" id="name">
-        <label>Hora</label>
-            <input type="number" name="hora" id="hora">
-        <input type="submit" name="Enviar">
-    </div>
-</form>
-<dialog> 
-    <button id="cerrar">X</button>
-</dialog>
-<table>
-    <thead>
-        <th>Nombre</th>  
-        <th>Horas</th>
-        <th>Sueldo diario</th>>
-    </thead>
-    <tbody id="cuerpo">
-
-    </tbody>
-</table>
+        <form id="numeros">
+            <Label>Ingrese un número:</Label>
+            <input type="number" name="N">
+            <input type="submit" value="Enviar">
+        </form>
+        <h2></h2>
 </body>
 
 </html>
