--- a/index.html
+++ b/index.html
@@ -5,24 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad de Repaso - Tercer Punto</title>
+    <title>Actividad de Repaso - Cuarto Punto</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 
 <body>
-    <h1>Punto 3</h1>
-    <h3>3. Dados dos números enteros positivos N y D, se dice que D es un divisor de N si el resto de dividir N entre D
-        es 0. Se dice que un número N es perfecto si la suma de sus divisores (excluido el propio N) es N. Por ejemplo
-        28 es perfecto, pues sus divisores (excluido elv28) son: 1, 2, 4, 7 y 14 y su suma es 1+2+4+7+14=28. Hacer un
-        organigrama que dado un número N nos diga si es o no perfecto.</h3>
+    <h1>Punto 4</h1>
+    <h3>4. Una compañía de seguros tiene contratados a N vendedores. Cada uno hace tres ventas a la semana. Su política
+        de pagos es que un vendedor recibe un sueldo base, y un 10% extra por comisiones de sus ventas. El gerente de su
+        compañía desea saber cuánto dinero obtendrá en la semana cada vendedor por concepto de comisiones por las tres
+        ventas realizadas, y cuanto tomando en cuenta su sueldo base y sus comisiones.</h3>
 
-        <form id="numeros">
-            <Label>Ingrese un número:</Label>
-            <input type="number" name="N">
-            <input type="submit" value="Enviar">
-        </form>
-        <h2></h2>
+    <form id="vendedores">
+        <label>Ingrese su nombre: </label>
+        <input type="text" name="nombre">
+
+        <label>Ingrese el valor de las ventas: </label>
+            <input type="number" name="Venta1">
+            <input type="number" name="Venta2">
+            <input type="number" name="Venta3">
+
+        <input type="submit" value="Enviar">
+    </form>
+    <table>
+        <tr>
+            <td>Nombre </td>
+            <td>Comision</td>
+            <td>Sueldo</td>
+        </tr>
+        <tbody></tbody>
+    </table>
+
 </body>
 
 </html>
